-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b115
-
Verified
The ReferencePendingListLocker asserts that the pending list lock is never taken recursively. This is incorrect, as it can be taken by a GC operation initiated by the ReferenceHandler thread, which might already own the lock. The asserts were added as part of JDK-8151601 in an attempt to strengthen the code, but they are incorrect and should be removed.