8152185: ReferencePendingListLocker incorrectly assumes that the lock is never taken recursively

Reviewed-by: stefank, sjohanss